@@ -2,9 +2,7 @@ AUX apache_exporter.confd 59 BLAKE2B 4466ae408352adc136fa882cf382c1562e8e0b6401e
 AUX apache_exporter.initd 650 BLAKE2B 86d014a2bb4f98a54a5e98060884bb99d1ec4011ce028a981d9d39cc5a5292c39018a80df2a3f0ad4b97aa1a0da059e89ad151f0a0b3d13d6ba6386aa4a9d6d4 SHA512 42367bb35b79cb3c4946ae57e81fa918d94b9b5613469e1e070797ffc9ab7ae74aaa3ad244be35cef8fe5df043fb5e1a604449c3a416e01da7cb11ad95c2b5b1
 AUX apache_exporter.service 222 BLAKE2B 9f15ab491721873b60d75ea7e5fde68c4262cd56ee3b4b1b5b687cd7fe6f4b03c97ee96c863769985dd14ba4bb8f0047061d52b642e5fd9ca77ada18e8e17f6c SHA512 6f99413a18f6c5214fa6216399c249b80950e16277a91ccc9c1ef89c452efa806234dd3735e9110e26f9e110f1a2156fd5ab37b56107ba753daa16d9100156d6
 AUX sysconfig.apache_exporter 11 BLAKE2B e83c8a1c6cf0d2269d032d80bfb5f37969adce8655298d49f942e19318e1fcabe7f618514ce65d9e0209959d5ccb38141e81fcccd65a754584eaf2db3b4fbd03 SHA512 f4d982f86de30c5b52b04c201cd38fffa87f860bef18af6ab85e856ae2081b919256b918b5f4821ee2fc4da0548d1a95c2522b29cddca57f694e2f26c1b1b2b9
-DIST apache_exporter-0.7.0.tar.gz 987330 BLAKE2B 32bc61767a2b84630c63c5cab31bcec2446a508870334ef1d952a7cf6fd7e8e5868f1059972f9c3c8be2cdc93a3eef56a67814586e31bca7377237690fee7b5d SHA512 c4193bc665e7de292e208e2df8bdb1d261e06bd8e9dd8f9c8ca36928f90bdaa792e3e648955d68acc79502eaf0245e41d8a238d60c839bbd2a46ec928d114950
 DIST apache_exporter-0.8.0.tar.gz 1687423 BLAKE2B 8ffe1edd6549c6129ec82852ee7134ba3ceb22f6ab6c678e0c28e6ed58c43d0243184efed013e11e3062b4359beb43914059bc35a31f242c93ef210616248fc7 SHA512 1e885687a8a2d5abfbf16f11d1940688b65404e76fa620ef397eb85733ab0fa9ec9ba4143728466d3036266a6f3ef03409000a7c69d85e2be6eda2075bc8a113
-EBUILD apache_exporter-0.7.0.ebuild 1351 BLAKE2B 95ff9f9461be60823d9794b215efee7ccb87ea5ab8ab458a3f70d4bf32206dfebcfc06f32c31fb8f88f004c2f180efd0c9053a369d7392403ceaba36fae51b4c SHA512 6e372b104e919ee3266ac9b591c85d951cca36508f6da59f7801a84b0d5c3de7a284d5ae16b823fcb723f4fdaf732133a0de7f065bd837cb2dfb1bc7edec450b
 EBUILD apache_exporter-0.8.0.ebuild 1338 BLAKE2B fcb27ddbc1776ed8bdc88bda4c3af44fe647b2a6c38ab3965818e1341a1b90a56ef8343516893fd78618765e1a72df25efe712a47057477d4c5dbc53854745a5 SHA512 6d8cb6a7ec0167d45d6cf697d12473b1c9328a22fd0e1a2efb4fb290c56a240634660bc221f19009e230e63679263807a0db1d484525d43932517d0b26c7c559
-MISC ChangeLog 759 BLAKE2B 84c47f8fa189d99c9ef6877f28e621d7c941bd15da4f99b72efcf54968e4acaa0cf8775889445781d71e2e5cfb42e2e9aee4dfed7e9b41a05b3ce8a21a19de23 SHA512 26c74833beabaaed82e904fcaded62f4ee5f5b743d0b0e2cea91faec7d2cb737e45cdf1a118ca51b56a49d7f5da0ad4f5aa9f6d02c9d4bcd71c26d2ed0598e76
+MISC ChangeLog 889 BLAKE2B eaf24b467c3d48a2e44fffe791dded5128f6f71aff5e83ae31449c68a20a0b54c09165047f2697626ff0080a02e3aaeef4b0e6ab0d8985e34f5de70d968c3397 SHA512 690e01431ad7780f75863f9e5d4e94bb4ea6204f4f3a18dcfb8c45b2eec3485f93efdbbaa88abcd912c016b977adbc93ba9f0544e9d090c8f5220f82d242e2af
 MISC metadata.xml 337 BLAKE2B bd72b6097fead5eaf80082790d3712ae0893b118140b62f58639f0e5c56bebf57dbd0ccd0ea19af82b2dce88c88c494d88290f98df4818e4fad3f4386398d171 SHA512 aee4825d8b90a8fd84fb558b9af4b7eb889fcf81bae6c7b317a9d69f62b06dd0f0bc2aa91aa2c32f10ff91fdbf64b341d7e5adc3c65a5225c7e0e92d7a6b7816
