@@ -1,3 +1,6 @@
+  29 Sep 2020; Manuel Friedli <manuel@gentoo.org> -apache_exporter-0.7.0.ebuild:
+  app-metrics/apache_exporter: Purge old ebuild
+
 *apache_exporter-0.8.0 (29 Sep 2020)
 
   29 Sep 2020; Manuel Friedli <manuel@gentoo.org> +apache_exporter-0.8.0.ebuild:
